# Insane-Keyboard

./: installation_softwares.txt
HardwareDesign/ExcelSheets/: Current and Power Calculations.xlsx  Schematic review_checklist _20240930.xlsx  bq25505(70_Design_Help_V1_3.xlsx
HardwareDesign/Mechanical Keyboard - SiCK-68 - 3478494/: LICENSE.txt  README.txt
Insane_Keyboard/: .cproject  .project  Insane_Keyboard.slcp  Insane_Keyboard.slps
Insane_Keyboard/.pdm/: uc.module.setup.ucTemplate.com.silabs.ss.tool.ide.arm.toolchain.gnu.cdt.debug#com.silabs.ss.tool.ide.arm.toolchain.gnu.cdt.10.2.1.20201103.gcc.slsproj
Insane_Keyboard/autogen/: sl_event_handler.c
Insane_Keyboard/config/: pin_config.h  sl_board_control_config.h
Keyboard_Firmware/: .cproject  .project  .projectlinkstore  Keyboard_Firmware.Makefile  Keyboard_Firmware.pintool  Keyboard_Firmware.project.mak  Keyboard_Firmware.slcp  Keyboard_Firmware.slps  app.c  app.h  ble.excalidraw  main.c  vscode.conf
Keyboard_Firmware-DEFAULT-PRINT/: .cproject  .projectlinkstore  Keyboard_Firmware.pintool  app.c  app.h
Keyboard_Firmware-DEFAULT-PRINT/.pdm/: uc.module.setup.componentSetup.com.silabs.ss.tool.ide.arm.toolchain.gnu.cdt.debug#com.silabs.ss.tool.ide.arm.toolchain.gnu.cdt.12.2.1.20221205.gcc.slsproj
Keyboard_Firmware-DEFAULT-PRINT/.uceditor/: .Keyboard_Firmware.board_control.cedit  .Keyboard_Firmware.i2cspmSensors.cedit  .Keyboard_Firmware.iostream_usartvcom.cedit  .Keyboard_Firmware.spidrv.cedit  .Keyboard_Firmware.spidrv_usartdisplayy.cedit
Keyboard_Firmware-DEFAULT-PRINT/GNU ARM v12.2.1 - Debug/: Keyboard_Firmware.axf  Keyboard_Firmware.hex  Keyboard_Firmware.map  Keyboard_Firmware.s37  app.d  main.d  makefile  sl_gatt_service_device_information.d  subdir.mk
Keyboard_Firmware-DEFAULT-PRINT/autogen/: gatt_db.c  (+3 more)
Keyboard_Firmware/Keyboard_Firmware_cmake/: CMakeLists.txt  CMakePresets.json  Keyboard_Firmware.cmake  Keyboard_Firmware_project.cmake  toolchain.cmake
project_report/: the_insane_keyboard.aux  the_insane_keyboard.fdb_latexmk  the_insane_keyboard.fls  the_insane_keyboard.ilg  the_insane_keyboard.lof  the_insane_keyboard.lot  the_insane_keyboard.out  the_insane_keyboard.tex  the_insane_keyboard.toc
(+744 files in other folders)
